# f-rsta-g-ngen

./: .gitmodules  AGENTS.md  CLAUDE.MD  GEO-GUIDE.md  GITHUB-PAGES-GUIDE.md  README.md  create-pdf-simple.js  create-pdf.py  create-pdfs.js  create_presentation.py  forbattringar-restaurangjouren.md  geo-demo.html  index.html  open-chrome.js  package-lock.json  package.json  pyproject.toml  robots.txt  send-email.py  setup-home.sh  vattnets_kretslopp.pptx
ai-konsult/: AFFÄRSSTRATEGI.md  PRODUKTER-OCH-TJÄNSTER.md  README.md
ai-konsult/konkurrensanalys/: PROMPTS-KONKURRENSANALYS.md
ai-konsult/saljmaterial/: PITCH-DECK.md  PRISSÄTTNING.md
ai-konsult/subagents/: ROLLER.md  SUBAGENT-SYSTEM.md
dotfiles/: .bashrc  .gitconfig
src/data_processor/: __init__.py  cli.py  processor.py
tests/: test_processor.py
youtube-kanal/: README.md  SNABBSTART.md  YOUTUBE-KANALPLAN.md
youtube-kanal/strategi/: CONTENT-CALENDAR.md
youtube-kanal/tekniker/: SEBASTIEN-TEKNIKER.md
youtube-kanal/videoideer/: 100-VIDEOIDEER.md
